# sekai

./: .gitignore  Cargo.toml
examples/: #firefly.rs#  ant.rs  firefly.rs  firefly_synchronization.rs  gameoflife.rs
src/: .lib.rs.rustfmt  entity.rs  lib.rs  world.rs
